tests/negative/gold/prefixed_assign3_test.gold
tests/negative/prefixed_assign3_test.toit:6:6: error: Can't assign to class 'A'
  pa.A = 3
     ^
Compilation failed.
